--- a/Frontend/ProjetoWeb_Stories/ProjetoWeb_Stories.csproj
+++ b/Frontend/ProjetoWeb_Stories/ProjetoWeb_Stories.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Abp" Version="9.2.2" />
     <PackageReference Include="jQuery" Version="3.7.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
